--- a/views/user/layout/contact/meet_the_owners.ejs
+++ b/views/user/layout/contact/meet_the_owners.ejs
@@ -1,33 +1,34 @@
-<div class="meet_owners_container padding-top-bottom-5 relative">
-    <div class="owner_box_overlay"></div>
-  <p class="width-50 mobile-width-80 text-banner">Meet the Owners </p>
+<div class="meet_owners_container">
 
-  <div class='row margin-top-5 mobile-margin-top-15'>
+    <div class="meet_owner_overlay"></div>
+    <p class="text-banner meet_owner_banner">Meet the Owners </p>
 
-    <div class="col-1"></div>
+    <div class='row meet_owner_row'>
 
-    <div class="col-10">
+        <div class="col-1"></div>
 
-        <div class='row'>
+        <div class="col-10">
 
-            <div class="col-6 mobile-col-12 landscape-col-6">
+            <div class='row'>
 
-              <img class ="owner_img" src = "./assets/images/2.png" />
-              <p class="owner_name margin-top-5 akrobat white ">Marco Khodr </p>
+                <div class="col-6 meet_owner_col mobile-col-12 landscape-col-6">
+
+                  <img class ="meet_owner_img" src = "./assets/images/2.png" />
+                  <p class="meet_owner_name">Marco Khodr </p>
+                </div>
+
+                <div class="col-6 mobile-col-12 landscape-col-6 meet_owner_col--2 ">
+                  A business that looks well maintained is successful.
+                  Our company specializes in cleaning windows to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.
+                  Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
+                </div>
+
+
+
             </div>
 
-            <div class="col-6 mobile-col-12 landscape-col-6 description_owner mobile-text-center about_description mobile-font-16 mission_text_size mobile-font-18 akrobat white ">
-              A business that looks well maintained is successful.
-              Our company specializes in cleaning windows to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.
-              Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
-            </div>
+       </div>
 
-
-
-        </div>
-
-    </div>
-
-  </div>
+   </div>
 
 </div>
