--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,5 +1,5 @@
-
 <%- include("./layout/head.ejs") %>
+
   <div id="wrapper" class="<%=lock %> ">
 
       <%- include("./layout/modal.ejs") %>
@@ -28,12 +28,12 @@
 
     <div class="container-fluid about_us_container">
 
-
         <%- include("./layout/home/about.ejs")  %>
 
         <div class="our_work_section ">
+
             <div class="wavy_section">
-                <div class = "wave  background-006 "></div>
+                <div class = "wave background-006 "></div>
             </div>
 
         <div class="our_clients_container">
@@ -41,15 +41,7 @@
         </div>
       </div>
 
-      <div class="contact_section">
-          <p class="contact_section_title text-banner "> Contact Us Today!</p>
-          <div class="contact_section_bluebox background-005"></div>
-      </div>
-
-      <div class="contact_info_section color-01 ">
-          <p class="text-banner contact_info_section--number ">489-939-9393 </p>
-          <p class="text-banner  contact_info_section--email ">info@customfacilityservices.com </p>
-      </div>
+      <%- include("./layout/home/contact.ejs") %>
 
       <div class="gallery_home_container">
 
@@ -64,9 +56,5 @@
   </div>
 
 </div>
-
-
-
-
 
   <%- include("./layout/end.ejs") %>
