--- a/views/user/layout/contact/what_we_do.ejs
+++ b/views/user/layout/contact/what_we_do.ejs
@@ -1,44 +1,43 @@
-<div class="work_container relative">
+<div class="work_container ">
 
+      <div class="work_inner_container">
 
-      <div class="what_we_do_inners we_clean_inners mobile-background-white landscape-background-none mobile-padding-top-10 width-100 padding-top-5 padding-bottom-10">
+        <p class="text-banner work_heading" > What We Clean </p>
 
-        <p class="text-banner white font-60 mobile-font-40 mobile-text-center  text-left width-40 mobile-margin-left-0 mobile-width-80 " >     What We Clean </p>
+        <div class="row margin-top-small">
 
-        <div class="row mobile-margin-top-10 margin-top-5">
-
-          <div class="col-6 mobile-col-12 landscape-col-6 padding-0">
+          <div class="col-6 mobile-col-12 landscape-col-6 work_col">
 
             <div class="width-100">
-              <img src = "./assets/images/what_we_do_1.png" class="width-100"/>
-              <p class="text-banner mobile-width-80  width-50 float-left absolute bottom-0 left-0 mobile-font-30"> Screens</p>
+              <img src = "./assets/images/what_we_do_1.png" class="work_image"/>
+              <p class="work_image_banner work_image_banner--left text-banner"> Screens</p>
             </div>
 
           </div>
 
-          <div class="col-6 mobile-col-12 landscape-col-6  padding-0">
+          <div class="col-6 mobile-col-12 landscape-col-6 work_col">
 
-            <div class="width-100">
-              <img src = "./assets/images/what_we_do_2.png" class="width-100"/>
-              <p class="text-banner mobile-width-80 width-50 float-right absolute bottom-0 right-0 mobile-font-30"> Window Ledges</p>
+            <div class="work_image_container">
+              <img src = "./assets/images/what_we_do_2.png" class="work_image"/>
+              <p class="work_image_banner work_image_banner--right text-banner"> Window Ledges</p>
             </div>
 
           </div>
 
-          <div class="col-6  mobile-col-12 landscape-col-6 padding-0">
+          <div class="col-6  mobile-col-12 landscape-col-6 work_col">
 
-            <div class="width-100">
-              <img src = "./assets/images/what_we_do_3.png" class="width-100"/>
-              <p class="text-banner mobile-width-80 width-50 float-left absolute bottom-0 left-0 mobile-font-30"> Window Panels</p>
+            <div class="work_image_container">
+              <img src = "./assets/images/what_we_do_3.png" class="work_image"/>
+              <p class="work_image_banner work_image_banner--left text-banner"> Window Panels</p>
             </div>
 
           </div>
 
-          <div class="col-6 mobile-col-12 landscape-col-6 padding-0">
+          <div class="col-6 mobile-col-12 landscape-col-6 work_col">
 
-            <div class="width-100">
-              <img src = "./assets/images/what_we_do_4.png" class="width-100"/>
-              <p class="text-banner width-50 mobile-width-80 mobile-font-30 float-right absolute bottom-0 right-0 mobile-font-30">Window Frames</p>
+            <div class="work_image_container">
+              <img src = "./assets/images/what_we_do_4.png" class="work_image"/>
+              <p class="work_image_banner work_image_banner--right text-banner">Window Frames</p>
             </div>
 
           </div>
