--- a/views/user/layout/home/contact.ejs
+++ b/views/user/layout/home/contact.ejs
@@ -1,18 +1,9 @@
-<!--
-<div class="showboxcontact relative margin-top-10 width-100">
-      <div class="blueboxcontact2  absolute background-006 width-20 z-3"></div>
-      <div class="blueboxcontact2 margin-top-7_5-neg right-20 background-005"></div>
+<div class="contact_section">
+    <p class="contact_section_title text-banner "> Contact Us Today!</p>
+    <div class="contact_section_bluebox background-005"></div>
+</div>
 
-      <div class="supportbox absolute width-80 z-5 background-c7 mobile-margin-right-10 margin-right-10">
-
-          <img class="width-100 z-4 mobile-margin-top-70 showimg" id="showid" src = "./assets/images/show_img_desktop.png"/>
-          <p class="titleshow text-center width-100 white akrobat font-60 text-center absolute z-9 mobile-font-30">Get Quoted Today!</p>
-          <p class="titleshow2 text-center width-100 white akrobat font-20 text-center absolute z-9 mobile-font-20">We will reach back as fast as possible!</p>
-
-          <div class="quotebutton margin-left-10-import width-100 heavy-shadow no-outline font-30 padding-1 absolute akrobat text-center white black-background width-30">
-            <p class="white text-center padding-top-2_5 font-25" >Recieve a Free Quote!</p>
-          </div>
-
-      </div>
-
-    </div> -->
+<div class="contact_info_section color-01 ">
+    <p class="text-banner contact_info_section--number ">489-939-9393 </p>
+    <p class="text-banner  contact_info_section--email ">info@customfacilityservices.com </p>
+</div>
