--- a/views/user/layout/quote/before_and_after.ejs
+++ b/views/user/layout/quote/before_and_after.ejs
@@ -1,20 +1,9 @@
-<div class='width-100'>
+<div class="image_container_before relative">
+    <img class="width-100" src="./assets/images/before_1.png"/>
+    <p class="text-banner absolute width-50 "style="top:0;left:0">Before </p>
+</div>
 
-
-        <% if(before_and_after_images.length >0){%>
-
-          <% for(let images of before_and_after_images) { %>
-
-
-
-                  <img class=" width-100 height-100 relative" src ="<%= images.before %>" />
-                  <img class=" width-100 height-100" src ="<%= images.after %>"  />
-
-
-          <%}%>
-
-        <%}%>
-
-
-
+<div class="image_container_after relative">
+    <img class="width-100" src="./assets/images/after_1.png"/>
+    <p class="text-banner absolute width-50 "style="bottom:0;right:0">After </p>
 </div>
